Archive2/c8/3973946dd88f8a/output
main.cpp:9:38: error: return type specification for constructor invalid
         string string(const string& s) {
                                      ^
main.cpp: In copy constructor 'xyz::string::string(const xyz::string&)':
main.cpp:11:20: error: returning a value from a constructor
             return this;
                    ^
main.cpp: At global scope:
main.cpp:17:18: error: expected ';' before ':' token
 using xyz::string:
                  ^
main.cpp:17:18: error: expected unqualified-id before ':' token
